--- a/index.html
+++ b/index.html
@@ -3,19 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Srinithi - Frontend Developer & Creative Coder</title>
-    <meta name="description" content="Portfolio of Srinithi - Frontend Developer specializing in React, TypeScript, and creative web animations. Explore my projects and get in touch." />
+    <title>Srinithi - Frontend & Java Full Stack Developer</title>
+    <meta
+      name="description"
+      content="Portfolio of Srinithi - Frontend & Java Full Stack Developer skilled in React, TypeScript, Java, Spring Boot, and modern web technologies. Explore my projects, skills, and contact details."
+    />
     <meta name="author" content="Srinithi" />
-    <meta name="keywords" content="frontend developer, web developer, react developer, portfolio, creative coding, typescript" />
+    <meta
+      name="keywords"
+      content="frontend developer, java full stack developer, react developer, spring boot, web developer, portfolio, typescript, javascript, java"
+    />
 
-    <meta property="og:title" content="Srinithi - Frontend Developer & Creative Coder" />
-    <meta property="og:description" content="Portfolio of Srinithi - Frontend Developer specializing in React, TypeScript, and creative web animations." />
+    <meta
+      property="og:title"
+      content="Srinithi - Frontend & Java Full Stack Developer"
+    />
+    <meta
+      property="og:description"
+      content="Portfolio of Srinithi - Frontend & Java Full Stack Developer specializing in React, TypeScript, and Spring Boot. Explore creative projects and full-stack applications."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
